Entry Point for project updated

--- a/MessageChat/pom.xml
+++ b/MessageChat/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.nishant</groupId>
-	<artifactId>third</artifactId>
+	<artifactId>MessageChat</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
